[package]
name = "cracker"
version = "0.1.0"
authors = ["fulara <ntszar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
regex = "1.3"
whoami = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
error-chain = "0.12"
walkdir = "2.3"

[dependencies.filesystem]
version = "0.4.4"
features = ["mock"]